add nanoid and uuid

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "http-status": "^1.5.0",
     "knex": "^0.95.11",
     "moment": "^2.29.1",
+    "nanoid": "^3.1.28",
     "npmlog": "^5.0.1",
     "pg": "^8.7.1",
-    "stoppable": "^1.1.0"
+    "stoppable": "^1.1.0",
+    "uuid": "^8.3.2"
   }
 }
