removed and added migrations to the right dir

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 #database config
 POW_DB_CLIENT=postgresql
-POW_DB_HOST=db
+POW_DB_HOST=postgres
 POW_DB_NAME=powdb
 POW_DB_USER=pow
 POW_DB_PASSWORD=p0wWat3r_!
